--- a/pages/contact.html
+++ b/pages/contact.html
@@ -92,6 +92,6 @@
 
   <footer>
     <div>@Lixandru Liviu-Gabriel</div><br/>
-    <div>Acest website este o replica a site-ului <a href="https://www.decathlon.ro/" target="_blank">decathlon.ro</a> creata in scop educativ.</div>
+    <div>Acest website este o replica a site-ului <a href="https://www.decathlon.ro/" target="_blank">decathlon.ro</a>.</div>
   </footer>
 </html>
