--- a/index.html
+++ b/index.html
@@ -175,6 +175,6 @@
 
   <footer>
     <div>@Lixandru Liviu-Gabriel</div><br/>
-    <div>Acest website este o replica a site-ului <a href="https://www.decathlon.ro/" target="_blank">decathlon.ro</a>.</div>
+    <div>Acest website este o alternativa a site-ului <a href="https://www.decathlon.ro/" target="_blank">decathlon.ro</a>.</div>
   </footer>
 </html>
